[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vs_align"
version = "2.1.0"
description = "Video Alignment and Synchronization Functions for Vapoursynth."
authors = [{ name = "pifroggi" }]
license = { text = "MIT" }

dependencies = [
	"numpy",
    "torch",
    "timm"
]

[tool.setuptools.package-data]
vs_align = ["rife/*.pkl"]

[project.urls]
Home-page = "https://github.com/pifroggi/vs_align"
Repository = "https://github.com/pifroggi/vs_align"
